{{$NEXT}}

1.302021  2016-05-20 21:47:17-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Files.t should warn, not die, if it cannot remove its temp dir.
    - VMS fixes for Files.t and IPC system

1.302020  2016-05-18 11:54:15-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Many micro-opts from Graham Knop (haarg)
    - Spelling fixes and tests from Karen Etheridge (ether)
    - Fix leaky File.t file so that tmp doesn't fill up
    - Move some modules out of the known broken list in xt tests
    - Add Test2 based tools to downstream testing
    - Change when PID/TID are stashed (for forkprove)

1.302019  2016-05-18 08:16:39-07:00 America/Los_Angeles

    - POD Spelling fixes

1.302018  2016-05-14 09:08:05-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Handle Test::Builder::Exception properly
    - Silence noisy STDERR in test suite

1.302017  2016-05-13 08:09:58-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix util.t win32 bug

1.302016  2016-05-12 19:43:38-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Block signals in critical IPC section (Fix #661 and #668)
    - Merge Examples and examples into one dir (#660)
    - Documentation and typo fixes
    - Make Test2::Util::get_tid have a consistent prototype (#665)
    - Make TB->no_plan a no-op if a plan is set

1.302015  2016-05-09 07:46:54-07:00 America/Los_Angeles

    - Add Test::Alien to breakage info
    - Add Device::Chip to breakage info
    - Add subtest outdent to transition.pod

1.302014_010 2016-05-03 12:09:14-07:00 America/Los_Angeles (TRIAL RELEASE)

    - RC10
    - Update x-breaks, Breakage.pm, and Transition.POD
    - Fix shared memory leak
    - Fix typos and clarify docs.

1.302014_009 2016-04-27 10:05:18-07:00 America/Los_Angeles (TRIAL RELEASE)

    - RC9
    - No logic changes
    - Update x-breaks stuff
    - Update email addresses

1.302014_008 2016-04-26 11:40:40-07:00 America/Los_Angeles (TRIAL RELEASE)

    - RC8