@@ -32,7 +32,7 @@ sub _can_thread {
     # Threads are broken on perl 5.10.0 built with gcc 4.8+
     if ($] == 5.010000 && $Config{'ccname'} eq 'gcc' && $Config{'gccversion'}) {
         my @parts = split /\./, $Config{'gccversion'};
-        return 0 if $parts[0] >= 4 && $parts[1] >= 8;
+        return 0 if $parts[0] > 4 || ($parts[0] == 4 && $parts[1] >= 8);
     }
 
     # Change to a version check if this ever changes
