@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Improve thread checks to better detect broken 5.10 builds
+    - Use thread checks to skip/run t/Legacy/Regression/637.t
+
 1.302021  2016-05-20 21:47:17-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Files.t should warn, not die, if it cannot remove its temp dir.
